--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
     "@sanity/vision": "^4.2.0",
     "react": "^19.1",
     "react-dom": "^19.1",
